tolk-tester/tests/invalid-typing/err-6928.tolk
fun int.f(self, v: (int, int) = (0, 1+"")) {
}

/**
@compilation_should_fail
@stderr can not apply operator `+` to `int` and `slice`
 */
